desaturate dark mode colors / fix dark-mode-toggle unaligned on mobile

--- a/src/styles/dark.less
+++ b/src/styles/dark.less
@@ -9,8 +9,8 @@
     // Dark Mode Color Scheme
     :root {
         --dark: #01213c;
-        --medium: #1B618C;
-        --accent: hsl(80, 90%, 55%);
+        --medium: #005488;
+        --accent: #926D34;
     }
 
     body.dark-mode {
